--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1>Marketing</h1>
             <h1>Criativo</h1>
         </div>
-        <i class='bx bx-menu' onclick="openMenu()" id="icon-menu"></i> 
+        
         <ul class="menu-bar">
             <a href="#"><li>Inicio</li></a>
             <a href="#"><li>Serviços</li></a>
@@ -27,6 +27,25 @@
             <a href="#"><li>Início</li></a>
             <a href="#" id="btn-inscreva-se"><li>Já tem uma conta?</li></a>
         </ul>
+
+        <div class="mobile-menu-icon" onclick="showMenu()">
+            <button><img src="./components/images/menu_white_36dp.svg" alt=""></button>
+        </div>
+
+        <div class="mobile-menu">
+            <ul class="menu-bar">
+                <a href="#"><li>Inicio</li></a>
+                <a href="#"><li>Serviços</li></a>
+                <a href="#"><li>Sobre</li></a>
+                <a href="#"><li>Contato</li></a>
+                <a href="#"><li>Início</li></a>
+                <a href="#" id="btn-inscreva-se"><li>Já tem uma conta?</li></a>
+            </ul>
+            <div class="mobile-menu-icon">
+                <button><img src="./components/images/menu_white_36dp.svg" alt=""></button>
+            </div>
+
+        </div>
     </header>
     <main>
         <aside>
@@ -42,7 +61,7 @@
             </form>
         </aside>
         <article class="imagem">
-            <img src="./components/images/77d0a7c454e658833800528e748edbe9.png" alt="Madame Rosa">
+            <img src="./components/images/77d0a7c454e658833800528e748edbe9.png" alt="Madame Rosa" id="foto-perfil">
         </article>
 
     </main>
